--- a/src/pages/quotes/quotes.html
+++ b/src/pages/quotes/quotes.html
@@ -1,15 +1,12 @@
-<!--
-  Generated template for the QuotesPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>quotes</ion-title>
+    <ion-title> {{ quoteGroup.category | uppercase }} </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <ion-card *ngFor="let quote of quoteGroup.quotes">
+    {{ quote.text }}
+  </ion-card>
 </ion-content>
