successed unfavorite button

--- a/src/pages/quotes/quotes.html
+++ b/src/pages/quotes/quotes.html
@@ -20,6 +20,9 @@
       <ion-col text-right>
         <button ion-button clear small 
         (click)="onAddToFavorite(quote)">Favorite</button>
+
+        <button ion-button clear small color="danger"
+        (click)="onRemoveFromFavorites(quote)">Unfavorite</button>
       </ion-col>
     </ion-row>
   </ion-card>
