--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -10,6 +10,7 @@
     <ion-item-sliding
     *ngFor="let quote of quotes">
         <ion-item 
+        color="quoteBackground"
         (click)="onViewQuote(quote)">
           <h2>{{ quote.person }}</h2>
           <p>{{ quote.text }}</p>
